--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "ظرف توسط عناصر گرمایشی در بالا و پایین فضای فر گرم می شود. این عملکرد برای ظروفی که نیاز به حرارت بیشتری از بالا دارند ایده آل است.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "ظرف توسط عناصر گرمایشی در بالا و پایین فضای فر گرم می شود. این عملکرد برای ظروفی که به حرارت بیشتری از ته نیاز دارند ایده آل است.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "ظرف توسط المنت های حرارتی بالا و پایین گرم می شود و حرارت به طور مساوی توسط فن پخش می شود. برای پخت یکنواخت ظروف در یک سطح و تهیه سوفله.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "ظرف با هوای گرم و حرارت پایین گرم می شود. ایده آل برای پخت یک سطح زمانی که می خواهیم غذاهایی که سریع پخته شوند و بافتی ترد داشته باشند."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "ظرف با هوای گرم و حرارت پایین گرم می شود. ایده آل برای پخت یک سطح زمانی که می خواهیم غذاهایی که سریع پخته شوند و بافتی ترد داشته باشند.",
+    "CL_DV_OV_bio24_air_fry_desc": "ظرف توسط المنت حرارتی بالایی گرم می شود و حرارت به طور مساوی توسط فن پخش می شود. مناسب برای برش های کوچکتر گوشت، ماهی، سبزیجات و اقلام یخ زده از قبل آماده شده (سیب زمینی سرخ شده، ناگت مرغ).",
+    "CL_DV_OV_bio24_large_grill_desc": "ظرف توسط عنصر گریل بزرگ گرم می شود. این عملکرد برای ظروف و غذاهای پخته ای که نیاز به قهوه ای شدن دارند استفاده می شود.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "ظرف توسط عنصر گریل بزرگ در ترکیب با فن گرم می شود. از این عملکرد برای کباب کردن ماهی، گوشت و سبزیجات استفاده می شود.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "ظرف توسط المنت حرارتی پایینی گرم می شود. درست قبل از پایان زمان پخت یا برشته کردن، این تنظیم را روشن کنید. این عملکرد برای ظروفی که نیاز به پوسته یا قهوه ای شدن دارند استفاده می شود.",
+    "CL_DV_OV_bio24_steam_desc": "این غذا با بخار آب پخته می شود که باعث حفظ عطر و طعم می شود. هیچ انتقالی از طعم/عطر وجود ندارد، و اجازه می دهد غذاهای مختلف در کنار یکدیگر طبخ شوند. از این عملکرد برای بخارپز کردن سبزیجات، تخم مرغ، میوه، پاستا و برنج استفاده کنید.",
+    "CL_DV_OV_bio24_microwave_desc": "این عملکرد از امواج مایکروویو استفاده می کند. ظروف به سرعت و کارآمد یخ زدایی، گرم یا پخته می شوند. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "ظرف با هوای گرمی که از پشت فر تامین می شود گرم می شود و به طور مساوی با فن پخش می شود. اضافه کردن بخار باعث افزایش سطح رطوبت می شود. غذا از بیرون ترد و در داخل لطیف می شود. ایده آل برای پخت گوشت و سبزیجات.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "ظرف توسط المنت های حرارتی بالا و پایین گرم می شود و حرارت به طور مساوی توسط فن پخش می شود. اضافه کردن بخار باعث افزایش سطح رطوبت می شود. غذا از بیرون ترد و در داخل لطیف می شود. ایده آل برای پخت نان و شیرینی.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "این غذا با ترکیبی از مایکروویو و هوای گرم طبخ می شود. این کار زمان پخت را کوتاه می کند. از این عملکرد برای پخت نان گوشت، سیب زمینی، شیرینی و کیک استفاده می شود.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "این غذا با ترکیبی از مایکروویو، گریل و پنکه طبخ می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت گراتن سیب زمینی، کباب مرغ و تکه های کوچکتر گوشت.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "این غذا با ترکیبی از مایکروویو، حرارت بالا و پایین و فن پخته می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت تارت، نان و تکه های بزرگتر گوشت.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "این غذا با ترکیبی از مایکروویو، حرارت بالا و فن طبخ می شود. این کار زمان پخت را کوتاه می کند. مناسب برای پخت سبزیجات و غذاهای منجمد مانند لازانیا. "
 }
