--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "オーブンスペースの上部と下部にある加熱要素によって料理が加熱されます。この機能は、上部からの熱をより多く必要とする料理に最適です。",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "オーブンスペースの上部と下部にある加熱要素によって料理が加熱されます。この機能は、下部からの熱をより多く必要とする料理に最適です。",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "皿は上部と下部の加熱要素によって加熱され、熱はファンによって均等に分散されます。1 つのレベルで皿を均等に焼いたり、スフレを調理したりするのに便利です。",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "熱風と底熱で加熱します。サクサクとした食感の料理を早く作りたいとき、一段焼きに最適です。"
+    "CL_DV_OV_hot_air_bottom_heat_desc": "熱風と底熱で加熱します。サクサクとした食感の料理を早く作りたいとき、一段焼きに最適です。",
+    "CL_DV_OV_bio24_air_fry_desc": "皿は上部の加熱要素によって加熱され、熱はファンによって均等に分散されます。小さめに切った肉、魚、野菜、調理済みの冷凍食品（フライドポテト、チキンナゲット）に適しています。",
+    "CL_DV_OV_bio24_large_grill_desc": "大きなグリルエレメントで料理を加熱します。この機能は、焦げ目をつける必要のある料理や焼き物に使用します。",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "大型グリルエレメントとファンの組み合わせにより、料理を加熱します。この機能は、魚、肉、野菜を焼くのに使用されます。",
+    "CL_DV_OV_bio24_bottom_heat_desc": "料理は底部の加熱要素によって加熱されます。ベーキングまたはローストの時間が終わる直前にこの設定をオンにします。この機能は、底に皮を被せたり焦げ目をつけたりする必要がある料理に使用します。",
+    "CL_DV_OV_bio24_steam_desc": "蒸気を使って料理を調理するので、香りと風味が保たれます。風味や香りが移らないので、異なる料理を続けて調理できます。この機能を使用して、野菜、卵、フルーツ、パスタ、米などを蒸します。",
+    "CL_DV_OV_bio24_microwave_desc": "電子レンジを使用する機能です。料理を素早く効率的に解凍、加熱、調理します。 ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "オーブンの背面から供給され、ファンによって均等に分散される熱風によって料理が加熱されます。蒸気を加えることで水分レベルが高まります。食品は外側はカリカリ、内側は柔らかく仕上がります。肉や野菜を焼くのに最適です。",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "皿は上部と下部の加熱要素によって加熱され、熱はファンによって均等に分散されます。蒸気を加えると水分レベルが高まります。食品は外側はカリカリ、内側は柔らかくなります。パンやペストリーを焼くのに最適です。",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "料理は電子レンジと熱風を組み合わせて調理されます。これにより調理時間が短縮されます。この機能は、ミートローフ、ジャガイモ、ペストリー、ケーキを調理するために使用されます。",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "この料理は、電子レンジ、グリル、ファンを組み合わせて調理します。これにより、調理時間が短縮されます。ポテトグラタン、チキンロースト、小さめの肉片の調理に適しています。",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "この料理は、電子レンジ、上下の熱、ファンを組み合わせて調理します。これにより、調理時間が短縮されます。タルト、パン、大きな肉片の調理に適しています。",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "電子レンジ、トップヒート、ファンを組み合わせて調理します。これにより調理時間が短縮されます。野菜やラザニアなどの冷凍食品の調理に適しています。 "
 }
