--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "يتم تسخين الطبق بواسطة عناصر التسخين الموجودة في الجزء العلوي والسفلي من مساحة الفرن. هذه الوظيفة مثالية للأطباق التي تتطلب المزيد من الحرارة من الأعلى.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "يتم تسخين الطبق بواسطة عناصر التسخين الموجودة في الجزء العلوي والسفلي من مساحة الفرن. هذه الوظيفة مثالية للأطباق التي تتطلب المزيد من الحرارة من الأسفل.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "يتم تسخين الطبق بواسطة عناصر التسخين العلوية والسفلية، مع توزيع الحرارة بالتساوي بواسطة المروحة. لخبز الأطباق بالتساوي على مستوى واحد وتحضير السوفليه.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "يتم تسخين الطبق بالهواء الساخن والحرارة السفلية. مثالي للخبز على مستوى واحد عندما نريد أطباقًا يتم طهيها بسرعة ولها ملمس مقرمش."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "يتم تسخين الطبق بالهواء الساخن والحرارة السفلية. مثالي للخبز على مستوى واحد عندما نريد أطباقًا يتم طهيها بسرعة ولها ملمس مقرمش.",
+    "CL_DV_OV_bio24_air_fry_desc": "يتم تسخين الطبق بواسطة عنصر التسخين العلوي، مع توزيع الحرارة بالتساوي بواسطة المروحة. مناسب لقطع اللحوم والأسماك والخضروات الصغيرة والأطعمة المجمدة المعدة مسبقًا (البطاطس المقلية وقطع الدجاج).",
+    "CL_DV_OV_bio24_large_grill_desc": "يتم تسخين الطبق بواسطة عنصر الشواية الكبير. تُستخدم هذه الوظيفة للأطباق والأطعمة المخبوزة التي تتطلب التحمير.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "يتم تسخين الطبق بواسطة عنصر الشواية الكبير بالاشتراك مع المروحة. تُستخدم هذه الوظيفة لشواء الأسماك واللحوم والخضروات.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "يتم تسخين الطبق بواسطة عنصر التسخين السفلي. قم بتشغيل هذا الإعداد قبل انتهاء وقت الخبز أو التحميص مباشرةً. تُستخدم هذه الوظيفة للأطباق التي تتطلب قشرة سفلية أو تحميرًا.",
+    "CL_DV_OV_bio24_steam_desc": "يتم طهي الطبق بالبخار، مما يحافظ على الرائحة والنكهة. لا يحدث انتقال للنكهة/الرائحة، مما يسمح بطهي أطباق مختلفة جنبًا إلى جنب. استخدم هذه الوظيفة لطهي الخضروات والبيض والفواكه والمعكرونة والأرز بالبخار.",
+    "CL_DV_OV_bio24_microwave_desc": "تستخدم هذه الوظيفة الموجات الدقيقة. يتم إذابة تجميد الأطباق أو تسخينها أو طهيها بسرعة وكفاءة. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "يتم تسخين الطبق بالهواء الساخن المزود من الجزء الخلفي للفرن والموزع بالتساوي بواسطة المروحة. تعمل إضافة البخار على تعزيز مستويات الرطوبة. يصبح الطعام مقرمشًا من الخارج وطريًا من الداخل. مثالي لخبز اللحوم والخضروات.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "يتم تسخين الطبق بواسطة عناصر التسخين العلوية والسفلية، مع توزيع الحرارة بالتساوي بواسطة المروحة. تعمل إضافة البخار على تعزيز مستويات الرطوبة. يصبح الطعام مقرمشًا من الخارج وطريًا من الداخل. مثالي لخبز الخبز والمعجنات.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والهواء الساخن، مما يقلل من وقت الطهي. تُستخدم هذه الوظيفة لطهي رغيف اللحم والبطاطس والمعجنات والكعك.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والشواية والمروحة، مما يقلل من وقت الطهي. مناسب لطهي البطاطس المشوية والدجاج المشوي وقطع اللحم الصغيرة.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والحرارة العلوية والسفلية والمروحة. وهذا يقلل من وقت الطهي. مناسب لطهي الفطائر والخبز وقطع اللحم الكبيرة.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "يتم طهي الطبق باستخدام مزيج من الميكروويف والحرارة العلوية والمروحة، مما يقلل من وقت الطهي. مناسب لطهي الخضروات والأطعمة المجمدة مثل اللازانيا. "
 }
