--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Pokrm je ohříván topnými tělesy v horní a spodní části prostoru trouby. Tato funkce je ideální pro pokrmy, které vyžadují více tepla shora.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Pokrm je ohříván topnými tělesy v horní a spodní části prostoru trouby. Tato funkce je ideální pro nádobí, které vyžaduje více tepla ze dna.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "Pokrm je ohříván horním a spodním topným tělesem, přičemž teplo rovnoměrně rozděluje ventilátor. Pro rovnoměrné pečení pokrmů na jedné úrovni a přípravu suflé.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "Miska se zahřívá horkým vzduchem a spodním ohřevem. Ideální pro pečení na jedné úrovni, když chceme pokrmy, které jsou rychle uvařené a mají křupavou strukturu."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Miska se zahřívá horkým vzduchem a spodním ohřevem. Ideální pro pečení na jedné úrovni, když chceme pokrmy, které jsou rychle uvařené a mají křupavou strukturu.",
+    "CL_DV_OV_bio24_air_fry_desc": "Pokrm je ohříván horním topným tělesem, přičemž teplo rovnoměrně rozděluje ventilátor. Vhodné pro menší kusy masa, ryb, zeleniny a předpřipravených mražených potravin (hranolky, kuřecí nugety).",
+    "CL_DV_OV_bio24_large_grill_desc": "Pokrm je ohříván velkým grilovacím tělesem. Tato funkce se používá pro pokrmy a pečené pokrmy, které vyžadují zhnědnutí.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "Pokrm je ohříván velkým grilovacím tělesem v kombinaci s ventilátorem. Tato funkce se používá ke grilování ryb, masa a zeleniny.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "Pokrm je ohříván spodním topným tělesem. Toto nastavení zapněte těsně před koncem doby pečení nebo opékání. Tato funkce se používá pro pokrmy, které vyžadují spodní kůrku nebo zhnědnutí.",
+    "CL_DV_OV_bio24_steam_desc": "Pokrm se vaří v páře, která zachovává aroma a chuť. Nedochází k přenosu chuti/vůně, což umožňuje vařit různá jídla vedle sebe. Tuto funkci použijte k vaření zeleniny, vajec, ovoce, těstovin a rýže v páře.",
+    "CL_DV_OV_bio24_microwave_desc": "Tato funkce využívá mikrovlny. Pokrmy se rozmrazují, ohřívají nebo vaří rychle a efektivně. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "Pokrm je ohříván horkým vzduchem přiváděným ze zadní části trouby a rovnoměrně rozváděný ventilátorem. Přidání páry zvyšuje úroveň vlhkosti. Jídlo je venku křupavé a uvnitř jemné. Ideální pro pečení masa a zeleniny.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "Pokrm je ohříván horním a spodním topným tělesem, přičemž teplo rovnoměrně rozděluje ventilátor. Přidání páry zvyšuje úroveň vlhkosti. Jídlo je venku křupavé a uvnitř jemné. Ideální pro pečení chleba a pečiva.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "Pokrm se vaří kombinací mikrovln a horkého vzduchu. Tím se zkrátí doba vaření. Tato funkce se používá k pečení sekané, brambor, pečiva a koláčů.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Pokrm se připravuje kombinací mikrovlnné trouby, grilu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro přípravu zapékaných brambor, kuřecí pečeně a menších kousků masa.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Pokrm se vaří kombinací mikrovlnné trouby, horního a spodního ohřevu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro pečení dortů, chleba a větších kusů masa.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Pokrm se připravuje kombinací mikrovlnné trouby, horního ohřevu a ventilátoru. Tím se zkrátí doba vaření. Vhodné pro vaření zeleniny a mražených potravin, jako jsou lasagne. "
 }
