--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "התבשיל מחומם על ידי גופי החימום בחלק העליון והתחתון של חלל התנור. פונקציה זו אידיאלית עבור מנות הדורשות יותר חום מלמעלה.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "התבשיל מחומם על ידי גופי החימום בחלק העליון והתחתון של חלל התנור. פונקציה זו אידיאלית עבור מנות הדורשות יותר חום מלמטה.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "התבשיל מחומם על ידי גופי החימום העליונים והתחתונים, כאשר החום מופץ באופן שווה על ידי המאוורר. לאפייה אחידה של תבשילים ברמה אחת והכנת סופלים.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "התבשיל מחומם באוויר חם ובחום תחתון. אידיאלי לאפייה במפלס אחד כשאנחנו רוצים מנות שיבושלו במהירות ובעלות מרקם פריך."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "התבשיל מחומם באוויר חם ובחום תחתון. אידיאלי לאפייה במפלס אחד כשאנחנו רוצים מנות שיבושלו במהירות ובעלות מרקם פריך.",
+    "CL_DV_OV_bio24_air_fry_desc": "התבשיל מחומם על ידי גוף החימום העליון, כאשר החום מופץ באופן שווה על ידי המאוורר. מתאים לנתחים קטנים יותר של בשר, דגים, ירקות ופריטים קפואים מוכנים מראש (צ'יפס, נאגטס עוף).",
+    "CL_DV_OV_bio24_large_grill_desc": "המנה מחוממת על ידי אלמנט הגריל הגדול. פונקציה זו משמשת לתבשילים ומזון אפוי הדורשים השחמה.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "המנה מחוממת על ידי אלמנט הגריל הגדול בשילוב המאוורר. פונקציה זו משמשת לגריל דגים, בשר וירקות.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "התבשיל מחומם על ידי גוף החימום התחתון. הפעל את ההגדרה הזו ממש לפני תום זמן האפייה או הצלייה. פונקציה זו משמשת לתבשילים הדורשים קרום תחתון או השחמה.",
+    "CL_DV_OV_bio24_steam_desc": "המנה מבושלת באמצעות קיטור, השומר על הארומה והטעם. אין העברת טעם/ארומה, מה שמאפשר לבשל מנות שונות זו לצד זו. השתמש בפונקציה זו כדי לאדות ירקות, ביצים, פירות, פסטה ואורז.",
+    "CL_DV_OV_bio24_microwave_desc": "פונקציה זו משתמשת במיקרוגלים. הכלים מופשרים, מחוממים או מבושלים במהירות וביעילות. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "התבשיל מחומם על ידי האוויר החם המסופק מחלקו האחורי של התנור ומופץ באופן שווה עם המאוורר. הוספת אדים משפרת את רמות הלחות. האוכל נהיה פריך בחוץ ורך בפנים. אידיאלי לאפיית בשר וירקות.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "התבשיל מחומם על ידי גופי החימום העליונים והתחתונים, כאשר החום מופץ באופן שווה על ידי המאוורר. הוספת אדים משפרת את רמות הלחות. האוכל נהיה פריך בחוץ ורך בפנים. אידיאלי לאפיית לחם ומאפה.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "המנה מבושלת בשילוב של מיקרוגלים ואוויר חם. זה מקצר את זמן הבישול. פונקציה זו משמשת לבישול כיכר בשר, תפוחי אדמה, מאפים ועוגות.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, גריל ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול גרטן תפוחי אדמה, צלי עוף ונתחי בשר קטנים יותר.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, חום עליון ותחתון ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול טארטים, לחם ונתחי בשר גדולים יותר.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "המנה מבושלת בשילוב של מיקרוגל, חום עליון ומאוורר. זה מקצר את זמן הבישול. מתאים לבישול ירקות ומזונות קפואים כמו לזניה. "
 }
