--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "접시는 오븐 공간의 상단과 하단에 있는 가열 요소에 의해 가열됩니다. 이 기능은 상단에서 더 많은 열이 필요한 접시에 이상적입니다.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "접시는 오븐 공간의 상단과 하단에 있는 가열 요소에 의해 가열됩니다. 이 기능은 하단에서 더 많은 열이 필요한 접시에 이상적입니다.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "접시는 상단과 하단 가열 요소에 의해 가열되고, 열은 팬에 의해 고르게 분배됩니다. 한 레벨에서 접시를 고르게 굽고 수플레를 준비하는 데 사용됩니다.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "이 요리는 뜨거운 공기와 바닥 열로 가열됩니다. 빨리 익고 바삭한 질감의 요리를 원할 때 단일 레벨 베이킹에 이상적입니다."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "이 요리는 뜨거운 공기와 바닥 열로 가열됩니다. 빨리 익고 바삭한 질감의 요리를 원할 때 단일 레벨 베이킹에 이상적입니다.",
+    "CL_DV_OV_bio24_air_fry_desc": "접시는 상단 가열 요소로 가열되고, 열은 팬에 의해 고르게 분배됩니다. 작은 고기, 생선, 야채 및 미리 조리된 냉동 식품(감자튀김, 치킨 너겟)에 적합합니다.",
+    "CL_DV_OV_bio24_large_grill_desc": "접시는 큰 그릴 요소로 가열됩니다. 이 기능은 갈색으로 변하는 요리와 구운 음식에 사용됩니다.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "이 요리는 팬과 함께 큰 그릴 요소에 의해 가열됩니다. 이 기능은 생선, 고기 및 야채를 구울 때 사용됩니다.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "접시는 바닥 가열 요소에 의해 가열됩니다. 베이킹 또는 로스팅 시간이 끝나기 직전에 이 설정을 켜십시오. 이 기능은 바닥 크러스트 또는 브라우닝이 필요한 접시에 사용됩니다.",
+    "CL_DV_OV_bio24_steam_desc": "이 요리는 향과 맛을 보존하는 증기를 사용하여 조리됩니다. 풍미/향이 전달되지 않아 서로 다른 요리를 나란히 조리할 수 있습니다. 이 기능을 사용하여 야채, 계란, 과일, 파스타, 쌀을 찜하세요.",
+    "CL_DV_OV_bio24_microwave_desc": "이 기능은 마이크로파를 사용합니다. 요리는 빠르고 효율적으로 해동, 가열 또는 조리됩니다. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "이 요리는 오븐 뒤쪽에서 공급되는 뜨거운 공기로 가열되고 팬으로 고르게 분산됩니다. 증기를 추가하면 수분 수준이 향상됩니다. 음식은 바깥쪽은 바삭하고 안쪽은 부드러워집니다. 고기와 야채를 굽는 데 이상적입니다.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "접시는 상단과 하단 가열 요소에 의해 가열되고, 열은 팬에 의해 고르게 분배됩니다. 증기를 추가하면 수분 수준이 향상됩니다. 음식은 바깥쪽은 바삭하고 안쪽은 부드러워집니다. 빵과 페이스트리를 굽는 데 이상적입니다.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "이 요리는 마이크로파와 뜨거운 공기를 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 이 기능은 미트로프, 감자, 페이스트리, 케이크를 조리하는 데 사용됩니다.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "이 요리는 전자레인지, 그릴, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 감자 그라탕, 치킨 로스트, 작은 고기 조각을 조리하는 데 적합합니다.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "이 요리는 전자레인지, 상하부 열, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 타르트, 빵, 큰 고기 조각을 조리하는 데 적합합니다.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "이 요리는 전자레인지, 탑 히터, 팬을 조합하여 조리합니다. 이렇게 하면 조리 시간이 단축됩니다. 야채와 라자냐와 같은 냉동 식품을 조리하는 데 적합합니다. "
 }
