--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Retten varmes opp av varmeelementene øverst og nederst i ovnsrommet. Denne funksjonen er ideell for retter som krever mer varme fra toppen.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Retten varmes opp av varmeelementene øverst og nederst i ovnsrommet. Denne funksjonen er ideell for retter som krever mer varme fra bunnen.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "Retten varmes opp av de øvre og nedre varmeelementene, med varmen jevnt fordelt av viften. For jevn baking av retter på ett plan og tilberedning av suffléer.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "Retten varmes opp med varmluft og undervarme. Ideell for baking på ett nivå når vi ønsker retter som tilberedes raskt og har en sprø konsistens."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Retten varmes opp med varmluft og undervarme. Ideell for baking på ett nivå når vi ønsker retter som tilberedes raskt og har en sprø konsistens.",
+    "CL_DV_OV_bio24_air_fry_desc": "Retten varmes opp av det øverste varmeelementet, med varmen jevnt fordelt av viften. Egnet for mindre stykker av kjøtt, fisk, grønnsaker og ferdiglagde frosne varer (pommes frites, kyllingnuggets).",
+    "CL_DV_OV_bio24_large_grill_desc": "Retten varmes opp av det store grillelementet. Denne funksjonen brukes til retter og bakt mat som krever bruning.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "Retten varmes opp av det store grillelementet i kombinasjon med viften. Denne funksjonen brukes til å grille fisk, kjøtt og grønnsaker.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "Retten varmes opp av det nederste varmeelementet. Slå på denne innstillingen rett før slutten av steke- eller steketiden. Denne funksjonen brukes til retter som krever bunnskorpe eller bruning.",
+    "CL_DV_OV_bio24_steam_desc": "Retten tilberedes med damp, som bevarer aromaen og smaken. Det er ingen overføring av smak/aroma, slik at forskjellige retter kan tilberedes ved siden av hverandre. Bruk denne funksjonen til å dampe grønnsaker, egg, frukt, pasta og ris.",
+    "CL_DV_OV_bio24_microwave_desc": "Denne funksjonen bruker mikrobølger. Retter tines, varmes eller tilberedes raskt og effektivt. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "Retten varmes opp av varmluften som tilføres fra baksiden av ovnen og fordeles jevnt med viften. Tilsetning av damp øker fuktighetsnivået. Maten blir sprø ute og mør inni. Ideell for baking av kjøtt og grønnsaker.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "Retten varmes opp av de øvre og nedre varmeelementene, med varmen jevnt fordelt av viften. Tilsetning av damp øker fuktighetsnivået. Maten blir sprø ute og mør inni. Ideell for baking av brød og bakverk.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "Retten tilberedes med en kombinasjon av mikrobølger og varmluft. Dette forkorter koketiden. Denne funksjonen brukes til å tilberede kjøttbrød, poteter, bakverk og kaker.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Retten tilberedes med en kombinasjon av mikrobølgeovn, grill og vifte. Dette forkorter koketiden. Passer til koking av potetgrateng, kyllingstek og mindre kjøttstykker.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Retten tilberedes med en kombinasjon av mikrobølgeovn, over- og undervarme og vifte. Dette forkorter koketiden. Passer til å tilberede terter, brød og større kjøttstykker.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Retten tilberedes med en kombinasjon av mikrobølgeovn, overvarme og vifte. Dette forkorter koketiden. Egnet for tilberedning av grønnsaker og frossen mat som lasagne. "
 }
