--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "Posoda se segreva z grelnim elementom na vrhu in na dnu pečice. Ta funkcija je idealna za jedi, ki potrebujejo več toplote od zgoraj.",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "Posoda se segreva z grelnim elementom na vrhu in na dnu pečice. Ta funkcija je idealna za jedi, ki potrebujejo več toplote od spodaj.",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "Posoda se segreva z zgornjim in spodnjim grelnim elementom, pri čemer toploto enakomerno porazdeli ventilator. Za enakomerno peko jedi na eni ravni in pripravo suflejev.",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "Posoda se segreva z vročim zrakom in spodnjim grelnim elementom. Idealna izbira za peko na eni ravni, ko želimo jedi, ki so hitro pečene in imajo hrustljavo teksturo."
+    "CL_DV_OV_hot_air_bottom_heat_desc": "Posoda se segreva z vročim zrakom in spodnjim grelnim elementom. Idealna izbira za peko na eni ravni, ko želimo jedi, ki so hitro pečene in imajo hrustljavo teksturo.",
+    "CL_DV_OV_bio24_air_fry_desc": "Posoda se segreva z zgornjim grelnim elementom, toploto pa enakomerno porazdeli ventilator. Primerno za manjše kose mesa, rib, zelenjave in vnaprej pripravljenih zamrznjenih jedi (pomfrit, piščančji medaljoni).",
+    "CL_DV_OV_bio24_large_grill_desc": "Posodo segreva velik žar. Ta funkcija se uporablja za jedi in pečeno hrano, ki zahteva dobro zapečenost.",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "Jed segreva preko velikega žar elementa v kombinaciji z ventilatorjem. Ta funkcija se uporablja za pečenje rib, mesa in zelenjave.",
+    "CL_DV_OV_bio24_bottom_heat_desc": "Posodo segreva spodnji grelni element. To nastavitev vključite tik pred koncem časa pečenja ali kuhanja. Ta funkcija se uporablja za jedi, ki zahtevajo skorjo na dnu ali dobro zapečenost.",
+    "CL_DV_OV_bio24_steam_desc": "Jed se kuha s paro, ki ohrani aromo in okus. Ni prenosa okusa/arome, kar omogoča kuhanje različnih jedi eno poleg druge. To funkcijo uporabite za kuhanje zelenjave, jajc, sadja, testenin in riža na pari.",
+    "CL_DV_OV_bio24_microwave_desc": "Ta funkcija uporablja mikrovalove. Jedi so hitro in učinkovito odmrznjene, pogrete ali kuhane. ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "Posodo segreva vroč zrak, ki se dovaja iz zadnje strani pečice in se enakomerno porazdeli z ventilatorjem. Dodatek pare poveča raven vlage. Hrana postane hrustljava zunaj in mehka znotraj. Idealna izbira za peko mesa in zelenjave.",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "Posoda se segreva z zgornjim in spodnjim grelnim elementom, toploto pa enakomerno porazdeli ventilator. Dodatek pare poveča raven vlage. Hrana postane hrustljava zunaj in mehka znotraj. Idealna izbira za peko kruha in peciva.",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "Jed se kuha s kombinacijo mikrovalov in vročega zraka. To skrajša čas kuhanja. Ta funkcija se uporablja za peko mesne štruce, krompirja, peciva in tort.",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "Jed se pripravi s kombinacijo mikrovalovne pečice, žara in ventilatorja. To skrajša čas kuhanja. Primerna izbira za peko gratiniranega krompirja, piščančje pečenke in manjših kosov mesa.",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "Jed se kuha s kombinacijo mikrovalovne pečice, zgornjega in spodnjega grelnega elementa ter ventilatorja. To skrajša čas kuhanja. Primerna izbira za pripravo pit, kruha in večjih kosov mesa.",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "Jed se kuha s kombinacijo mikrovalovne pečice, zgornjega grelnega elementa in ventilatorja. To skrajša čas kuhanja. Primerna izbira za kuhanje zelenjave in zamrznjenih živil, kot je lazanja. "
 }
