--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "จานจะได้รับความร้อนจากแผ่นทำความร้อนที่ด้านบนและด้านล่างของช่องเตาอบ ฟังก์ชันนี้เหมาะสำหรับจานที่ต้องการความร้อนจากด้านบนมากกว่า",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "จานจะได้รับความร้อนจากองค์ประกอบความร้อนที่ด้านบนและด้านล่างของช่องเตาอบ ฟังก์ชั่นนี้เหมาะสำหรับจานที่ต้องการความร้อนจากด้านล่างมากกว่า",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "จานได้รับความร้อนจากแผ่นทำความร้อนด้านบนและด้านล่าง โดยกระจายความร้อนอย่างสม่ำเสมอด้วยพัดลม เพื่อการอบจานที่สม่ำเสมอในระดับเดียวกันและการเตรียมซูเฟล่",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "จานนี้ใช้ความร้อนจากลมร้อนและความร้อนจากด้านล่าง เหมาะสำหรับการอบแบบชั้นเดียวเมื่อเราต้องการอาหารที่สุกเร็วและมีเนื้อสัมผัสที่กรอบ"
+    "CL_DV_OV_hot_air_bottom_heat_desc": "จานนี้ใช้ความร้อนจากลมร้อนและความร้อนจากด้านล่าง เหมาะสำหรับการอบแบบชั้นเดียวเมื่อเราต้องการอาหารที่สุกเร็วและมีเนื้อสัมผัสที่กรอบ",
+    "CL_DV_OV_bio24_air_fry_desc": "จานได้รับความร้อนจากแผ่นทำความร้อนด้านบน โดยกระจายความร้อนอย่างสม่ำเสมอด้วยพัดลม เหมาะสำหรับเนื้อสัตว์ ปลา ผัก และอาหารแช่แข็งที่เตรียมไว้แล้ว (เฟรนช์ฟราย นักเก็ตไก่)",
+    "CL_DV_OV_bio24_large_grill_desc": "จานได้รับความร้อนจากแผ่นย่างขนาดใหญ่ ฟังก์ชั่นนี้ใช้สำหรับอาหารอบที่ต้องการให้สุกเป็นสีน้ำตาล",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "เตาย่างขนาดใหญ่พร้อมพัดลมทำหน้าที่ทำความร้อนจาน โดยทำหน้าที่ย่างปลา เนื้อสัตว์ และผัก",
+    "CL_DV_OV_bio24_bottom_heat_desc": "จานจะได้รับความร้อนจากแผ่นทำความร้อนที่ด้านล่าง เปิดการตั้งค่านี้ก่อนสิ้นสุดเวลาอบหรือย่าง ฟังก์ชันนี้ใช้สำหรับจานที่ต้องมีเปลือกด้านล่างหรือสีน้ำตาล",
+    "CL_DV_OV_bio24_steam_desc": "ปรุงอาหารจานนี้โดยใช้ไอน้ำซึ่งช่วยรักษากลิ่นและรสชาติเอาไว้ ไม่มีการถ่ายเทรสชาติหรือกลิ่น ทำให้สามารถปรุงอาหารจานต่างๆ พร้อมกันได้ ใช้ฟังก์ชันนี้ในการนึ่งผัก ไข่ ผลไม้ พาสต้า และข้าว",
+    "CL_DV_OV_bio24_microwave_desc": "ฟังก์ชั่นนี้ใช้ไมโครเวฟ ทำให้ละลายน้ำแข็ง อุ่นอาหาร หรือปรุงอาหารได้อย่างรวดเร็วและมีประสิทธิภาพ ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "จานจะได้รับความร้อนจากลมร้อนที่ส่งมาจากด้านหลังของเตาอบและกระจายอย่างทั่วถึงด้วยพัดลม การเพิ่มไอน้ำจะช่วยเพิ่มระดับความชื้น อาหารจะกรอบนอกและนุ่มใน เหมาะสำหรับการอบเนื้อสัตว์และผัก",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "จานได้รับความร้อนจากแผ่นทำความร้อนด้านบนและด้านล่าง โดยกระจายความร้อนอย่างทั่วถึงด้วยพัดลม การเพิ่มไอน้ำจะช่วยเพิ่มระดับความชื้น อาหารจะกรอบนอกนุ่มใน เหมาะสำหรับการอบขนมปังและขนมอบ",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "ปรุงอาหารจานนี้โดยใช้ไมโครเวฟและลมร้อนร่วมกัน ทำให้ระยะเวลาในการปรุงสั้นลง ฟังก์ชันนี้ใช้สำหรับทำเนื้อสับ มันฝรั่ง ขนมอบ และเค้ก",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "อาหารจานนี้ปรุงโดยใช้ไมโครเวฟ เตาปิ้ง และพัดลมร่วมกัน วิธีนี้จะช่วยย่นระยะเวลาในการปรุง เหมาะสำหรับทำมันฝรั่งอบชีส ไก่อบ และเนื้อชิ้นเล็กๆ",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "ปรุงโดยใช้ไมโครเวฟ ไฟบน ไฟล่าง และพัดลมร่วมกัน ทำให้เวลาปรุงสั้นลง เหมาะสำหรับทำทาร์ต ขนมปัง และเนื้อชิ้นใหญ่",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "อาหารจานนี้ปรุงโดยใช้ไมโครเวฟ ไฟบน และพัดลมร่วมกัน วิธีนี้จะช่วยย่นระยะเวลาในการปรุง เหมาะสำหรับปรุงผักและอาหารแช่แข็ง เช่น ลาซานญ่า "
 }
