--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "此程序使用烤箱頂部和底部的加熱元件進行加熱。此功能非常適合那些需要從頂部獲得更多熱量來加熱的菜餚。",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "此程序使用烤箱頂部和底部的加熱元件進行加熱。此功能非常適合那些需要從底部獲得更多熱量來加熱的菜餚。",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "此程序使用烤箱頂部和底部的加熱元件進行加熱，並透過風扇將熱量均勻分佈於烤箱內腔，可在同一層架上溫度均勻地烘烤食物。",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "此程序使用環形熱風和底部加熱進行加熱，適合單面烘焙的食譜，不僅加熱迅速，而且口感酥脆。"
+    "CL_DV_OV_hot_air_bottom_heat_desc": "此程序使用環形熱風和底部加熱進行加熱，適合單面烘焙的食譜，不僅加熱迅速，而且口感酥脆。",
+    "CL_DV_OV_bio24_air_fry_desc": "此程序使用頂部加熱元件加熱，風扇將熱量均勻分佈於烤箱內。適用於小塊肉、魚、蔬菜和冷凍食品（薯條、雞塊）。",
+    "CL_DV_OV_bio24_large_grill_desc": "此程序使用頂部外圈加熱器進行加熱，適用於需要進行上色的烘焙烹飪。",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "此菜餚由大型燒烤元件與風扇結合加熱。此功能用於燒烤魚、肉和蔬菜。",
+    "CL_DV_OV_bio24_bottom_heat_desc": "此程序使用底部加熱元件加熱。在烘焙或烤製的程序結束前開啟此程序，將會使食物的底部更加酥脆，也有利於烘焙上色。",
+    "CL_DV_OV_bio24_steam_desc": "此程序使用蒸氣進行烹飪，保留食材香氣和味道的同時，即使同時烹飪多道不同的菜餚，也不會串味。使用此功能可蒸煮魚類、蔬菜、蛋類、麵點和米飯等多種食材。",
+    "CL_DV_OV_bio24_microwave_desc": "此功能使用微波爐。菜餚可以快速有效地解凍、加熱或烹飪。 ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "此程序使用烤箱背部的環形熱風加熱，風扇將熱量均勻分佈於烤箱內腔。加熱過程中會加入蒸氣，提高食材的水分含量，使食物外脆內嫩，非常適合烘烤肉類和蔬菜。",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "此程序使用頂部和底部加熱元件加熱，風扇均勻分佈熱量，烘烤過程中蒸氣的加入可提高食材水分的含量，使得食物外脆內嫩。非常適合烘烤麵包和糕點。",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "此程序使用微波和熱風相結合的烹飪方式，能夠縮短烹飪時間。此程序適用於烹飪肉餅、馬鈴薯、糕點和蛋糕等。",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "此程序使用微波、頂部加熱和風扇相結合的方式烹飪可以縮短烹飪時間。適合焗馬鈴薯、烤雞和烤小塊肉。",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "此程序採用微波、頂部加熱、底部加熱和風扇相結合的方式進行烹飪，可縮短烹飪時間。適合烹飪餡餅、麵包和大塊肉等。",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、頂部加熱和風扇相結合的方式烹飪，有利於縮短烹飪時間。適合烹調蔬菜和冷凍食品（如義式千層麵等）。 "
 }
