--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4557,5 +4557,17 @@
     "CL_DV_OV_bio24_top70_bottom30_heat_desc": "此程序使用烤箱顶部和底部的加热元件进行加热。此功能非常适合那些需要从顶部获得更多热量来加热的菜肴。",
     "CL_DV_OV_bio24_top30_bottom70_heat_desc": "此程序使用烤箱顶部和底部的加热元件进行加热。此功能非常适合那些需要从底部获得更多热量来加热的菜肴。",
     "CL_DV_OV_bio24_top_bottom_fan_desc": "此程序使用烤箱顶部和底部的加热元件进行加热，并通过风扇将热量均匀分布于烤箱内腔，可在同一层架上温度均匀地烘烤食物。",
-    "CL_DV_OV_hot_air_bottom_heat_desc": "此程序使用环形热风和底部加热进行加热，适合单面烘焙的菜谱，不仅加热迅速，而且口感酥脆。"
+    "CL_DV_OV_hot_air_bottom_heat_desc": "此程序使用环形热风和底部加热进行加热，适合单面烘焙的菜谱，不仅加热迅速，而且口感酥脆。",
+    "CL_DV_OV_bio24_air_fry_desc": "此程序使用顶部加热元件加热，风扇将热量均匀分布于烤箱内。适用于小块肉、鱼、蔬菜和冷冻食品（薯条、鸡块）。",
+    "CL_DV_OV_bio24_large_grill_desc": "此程序使用顶部外圈加热器进行加热，适用于需要进行上色的烘焙烹饪。",
+    "CL_DV_OV_bio24_large_grill_fan_desc": "大型烧烤元件与风扇相结合，对菜肴进行加热。此功能用于烧烤鱼、肉和蔬菜。",
+    "CL_DV_OV_bio24_bottom_heat_desc": "此程序使用底部加热元件加热。在烘焙或烤制的程序结束前开启此程序，将会使食物的底部更加酥脆，也有利于烘焙上色。",
+    "CL_DV_OV_bio24_steam_desc": "此程序使用蒸汽进行烹饪，保留食材香气和味道的同时，即使同时烹饪多道不同的菜肴，也不会串味。使用此功能可以蒸制鱼类、蔬菜、蛋类、面点和米饭等多种食材。",
+    "CL_DV_OV_bio24_microwave_desc": "此功能使用微波炉。可快速高效地解冻、加热或烹制菜肴。 ",
+    "CL_DV_OV_bio24_hot_air_steam_desc": "此程序使用烤箱背部的环形热风加热，风扇将热量均匀分布于烤箱内腔。在加热过程中会加入蒸汽，提高食材的水分含量，使食物外脆里嫩，非常适合烘烤肉类和蔬菜。",
+    "CL_DV_OV_bio24_top_bottom_fan_steam_desc": "此程序使用顶部和底部加热元件加热，风扇均匀分布热量。烘烤过程中蒸汽的加入可提高食材水分的含量，使得食物外脆内嫩。非常适合烘烤面包和糕点。",
+    "CL_DV_OV_bio24_hot_air_microwave_desc": "此程序使用微波和热风相结合的烹饪方式，能够缩短烹饪时间。此程序适用于烹饪肉饼、土豆、糕点和蛋糕等。",
+    "CL_DV_OV_bio24_large_grill_fan_microwave_desc": "此程序使用微波、顶部加热和风扇相结合的方式烹饪可以缩短烹饪时间。适合焗土豆、烤鸡和烤小块肉。",
+    "CL_DV_OV_bio24_top_bottom_fan_microwave_desc": "此程序采用微波、顶部加热、底部加热和风扇相结合的方式进行烹饪，可以缩短烹饪时间。适合烹饪馅饼、面包和大块肉等。",
+    "CL_DV_OV_bio24_air_fry_microwave_desc": "此程序使用微波、顶部加热和风扇相结合的方式烹饪，有利于缩短烹饪时间。适合烹饪蔬菜和冷冻食品（如意式千层面等）。 "
 }
